--- a/mission-ceramics/src/styles/ProductDetails.scss
+++ b/mission-ceramics/src/styles/ProductDetails.scss
@@ -54,7 +54,6 @@
   color: white;
   font-family: 'Alegreya', serif;
   font-size: 18px;
-  border-radius: 15px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   background: #B92227;
   margin-top: 20px;
